--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ REDIS_PORT=6379
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=redis
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
 MAIL_DRIVER=smtp
