--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "moment": "^2.29.3"
     }
 }
