--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
-        "@tailwindcss/forms": "^0.5.0",
+        "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vue/compiler-sfc": "^3.2.31",
         "axios": "^0.25",
@@ -25,6 +25,7 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "jquery": "^3.6.0",
         "moment": "^2.29.3"
     }
 }
