--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "jquery": "^3.6.0",
         "moment": "^2.29.3"
     }
