Add user and group to .env

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,11 @@ APP_NAME="Social"
 APP_ENV=local
 APP_KEY=base64:9DxlaRTRw6JYq3O7BXTtm+gheFA+8oOeMYcQNnnKYVg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://social.com
+SESSION_DOMAIN=social.com
+
+WWWUSER=1000
+WWWGROUP=1000
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
